[project]
name = "mp2ph"
version = "0.1.0"
description = "Stream Mixpanel raw-export JSONL into PostHog as a historical migration."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mohammed Mohsin" }]
requires-python = ">=3.9"
dependencies = ["requests>=2.31"]

[project.urls]
Homepage = "https://github.com/mdmohsin7/mp2ph"
Issues = "https://github.com/mdmohsin7/mp2ph/issues"

[project.scripts]
mp2ph = "mp2ph.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mp2ph*"]
